<resources>
    <string name="app_name">Homework#10</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="datetime">Time</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="windSpeed">Wind Speed</string>
    <string name="windDirection">Wind Direction</string>
</resources>